# newel

./: Cargo.toml  README.md
benches/: perf.rs
src/: consts.rs  eval.rs  lib.rs  macros.rs  operands.rs  ops.rs  scalarty.rs  tests.rs  traits.rs  zeroone.rs
