[package]
name = "newel"
description = "small vectorized evaluator"
version = "0.1.0"
authors = ["Graydon Hoare <graydon@pobox.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = true
overflow-checks = false

[dependencies]
packed_simd = "0.3.3"
rayon = "1.0.3"

[dev-dependencies]
bencher = "0.1.5"
quickcheck = "0.9.0"

[[bench]]
name = "perf"
harness = false